Pulizia: rimossi file e cartelle non necessari per la sola app frontend

--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -12,17 +12,18 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
-    <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/core_fonts.css">
     <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
+    <link rel="stylesheet" href="assets/css/core_pagine.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/account_azienda.css?v=5.0">
 </head>
 
-<body class="base-bg"> <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
+<body class="base-bg">
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script> <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
     <div class="base-container"> <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
         <div class="base-glow"></div> <!-- HEADER FISSO (Protocollo v3.1 Balanced) -->
         <header id="header-placeholder" class="base-header"></header>
