--- a/Frontend/public/aggiungi_scadenza.html
+++ b/Frontend/public/aggiungi_scadenza.html
@@ -11,12 +11,11 @@
     <link rel="manifest" href="manifest.json?v=4.1" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
-    <!-- CSS Modular System V4.1 -->
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fonts.css">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
-    <link rel="stylesheet" href="assets/css/scadenze.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/aggiungi_scadenza.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
