--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -20,25 +20,18 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
-    <!-- CSS Modular System V3.9 -->
-    <!-- 1. Core System -->
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
-    <!-- 2. Fonts -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- 3. Fascie (Header & Footer) -->
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <!-- 4. Shared Library -->
-    <!-- 4. Modular Shared Components -->
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
-    <!-- 5. Specific Page Style -->
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/impostazioni.css?v=5.0">
-
-    <!-- CORE JS -->
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
     <div class="base-container">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
