--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -17,7 +17,7 @@
     <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/account_privati.css?v=5.0">
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
