--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -21,10 +21,11 @@
 
 
 
-    <!-- 2. Core (Fonts & Protocollo Base V5.0) -->
-    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
-    <!-- 3. Stili Specifici Auth -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/accesso.css?v=5.0">
 </head>
 
