Refactor V5.0: Standardizzazione Pagine, Fix i18n Mancanti, JS Modale Archivio

--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -22,11 +22,14 @@
     <!-- 2. Estensioni Core -->
     <link rel="stylesheet" href="assets/css/core_fonts.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fascie.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <!-- 3. Stile di Pagina -->
     <link rel="stylesheet" href="assets/css/profilo_privato.css?v=5.0">
 </head>
 
 <body class="base-bg">
+    <!-- CORE JS (Body-Start) -->
+    <script src="assets/js/core.js"></script>
     <div class="base-container">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
@@ -173,7 +176,8 @@
                         </div>
                     </div>
 
-                    <!-- 6. NOTE -->
+
+                    <!-- 8. NOTE ANAGRAFICA -->
                     <div class="form-section">
                         <div class="form-section-header">
                             <h3 class="form-section-title" data-t="profile_notes">Note Anagrafica</h3>
@@ -194,7 +198,7 @@
     </div>
 
     <!-- Scripts (V5.0 Ordering) -->
-    <script src="assets/js/core.js"></script>
+
     <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/modules/privato/profilo_privato.js"></script>
 </body>
