--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" data-i18n="loading">
 
 <head>
-    <!-- Anti-flicker & Theme Master (V3.9) -->
+    <!-- Anti-flicker & Theme Master (V5.0) -->
     <script src="assets/js/theme-init.js"></script>
-    <!-- CSP (Content Security Policy) - V3.9 Standard -->
+    <!-- CSP (Content Security Policy) - V5.0 Standard -->
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com https://cdnjs.cloudflare.com 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Archivio Account - PROTOCOLLO BASE V3.9</title>
+    <title data-t="title_archive_accounts">Archivio Account - PROTOCOLLO BASE V5.0</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.9.1" />
-    <link rel="apple-touch-icon" sizes="192x192" href="./assets/images/app-icon.png">
+    <link rel="manifest" href="manifest.json?v=5.0" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -26,13 +26,12 @@
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
     <link rel="stylesheet" href="assets/css/archivio_account.css?v=5.0">
-
-    <!-- CORE JS -->
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
+    <!-- CORE JS (Body-Start) -->
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
     <div class="base-container">
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
@@ -54,9 +53,9 @@
                 <div class="settings-group">
 
                     <!-- Context Selector (Premium Dropdown V4.5) -->
-                    <div class="base-dropdown w-full mb-6">
-                        <button id="archive-filter-btn"
-                            class="base-btn-secondary w-full flex justify-between items-center h-12 px-5 rounded-2xl">
+                    <div class="base-dropdown base-dropdown-full archive-spacer-m">
+                        <button id="archive-filter-btn" class="base-btn-secondary" aria-label="Filtra archivio"
+                            data-t-aria="archive_all">
                             <span id="active-context-label" class="font-black text-sm uppercase tracking-widest"
                                 data-t="archive_all">Tutti
                                 gli archiviati</span>
@@ -72,7 +71,7 @@
                     </div>
 
                     <!-- Search Input (Standardized V5.0) -->
-                    <div class="search-field-box mb-6">
+                    <div class="search-field-box">
                         <span class="material-symbols-outlined text-secondary">search</span>
                         <input type="search" id="archive-search" class="search-input-field"
                             placeholder="Cerca nell'archivio..." data-t-placeholder="archive_search_placeholder">
@@ -101,7 +100,8 @@
 
                 <!-- Bottom Action: Empty Trash (Standardized) -->
                 <div class="settings-group archive-action-group">
-                    <button id="btn-empty-trash" class="btn-action-danger">
+                    <button id="btn-empty-trash" class="btn-action-danger" aria-label="Svuota Cestino"
+                        data-t-aria="empty_trash">
                         <span class="material-symbols-outlined">delete_forever</span>
                         <span data-t="empty_trash">Svuota Cestino</span>
                     </button>
